--- a/css/login.css
+++ b/css/login.css
@@ -166,11 +166,12 @@ body {
 
 #change {
     position: absolute;
-    top: 90px;
+    top: 95px;
     left: 340px;
     display: block;
     cursor: pointer;
     opacity: 0;
+    font-size: 20px;
 }
 
 #change:hover {
@@ -180,6 +181,10 @@ body {
 
 .konten #pw:focus ~ #change {
     opacity: 1;
+}
+
+.konten .garismobile {
+    display: none;
 }
 
 
@@ -260,7 +265,7 @@ footer {
 }
 
 /* responsive */
-@media (max-width: 992px) {
+/* @media (max-width: 992px) {
     .container {
         grid-template-columns: 1fr;
         margin: 0 auto 180px;
@@ -299,6 +304,155 @@ footer {
     .footer .link_footerbaru {
 
         margin-right: 20px;
+    }
+} */
+
+@media (max-width: 500px) {
+    .container {
+        width: 100%;
+        margin: 0 auto;
+        /* margin-bottom: 500px; */
+        /* background-color: red; */
+        grid-template-columns: 1fr;
+
+    }
+
+    .main .gambar {
+        display: flex;
+        justify-content: center;
+    }
+
+    .main img {
+        width: 150px;
+        margin-top: 0;
+    }
+
+    .main h2 {
+        display: none;
+    }
+
+    footer {
+        /* display: none; */
+    }
+
+    .konten {
+        /* background-color: red; */
+        max-width: 100%;
+        justify-content: start;
+    }
+
+    .konten form {
+        max-width: 320px;
+        margin: 0 auto;
+        padding: 0;
+        border-radius: 0;
+        box-shadow: none;
+    }
+
+    .konten input {
+        font-size: 14px;
+        max-width: 285px;
+        outline-color: rgb(255, 168, 7);
+        border-radius: 4px;
+        background-color: #dddfe2;
+        margin-top: 7px;
+    }
+
+    .konten  button {
+        max-width: 320px;
+        margin-top: 8px;
+        
+    }
+
+    .konten .akhir {
+        display: none;
+    }
+
+    .konten .new button {
+        border-radius: 4px;
+        font-size: 15px;
+        line-height: 38px;
+        background-color: white;
+        border: 1px solid #8A8D91;
+        color: black;
+        width: 250px;
+    }
+
+    .konten a {
+        width: 320px;
+    }
+
+    #change {
+        position: absolute;
+        top: 75px;
+        left: 285px;
+        display: block;
+        cursor: pointer;
+        opacity: 0;
+        font-size: 20px;
+    }
+    
+    .konten .garismobile {
+        /* background-color: red; */
+        position: relative;
+        display: block;
+    }
+
+    .garismobile p {
+        position: absolute;
+        color: #4b4f56;
+        top: -11px;
+        left: 153px;
+    }
+
+    .garismobile ul {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        column-gap: 40px;
+    }
+
+    .garismobile ul li {
+        border-bottom: 1px solid #dadde1;
+        list-style-type: none;
+
+    }
+
+    .konten .garis {
+        display: none;
+    }
+
+    .footer {
+        width: 100%;
+        margin: 0 auto;
+        padding: 25px 0;
+    }
+
+    .footer .link_footer {
+        width: 80%;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        text-align: center;
+        /* background-color: red; */
+        column-gap: 50px;
+        margin-top: 80px;
+    }
+
+    .footer .link_footer li:nth-child(8) {
+        display: none;
+    }
+    .footer .link_footer li:nth-child(9) {
+        display: none;
+    }
+    .footer .link_footer li:nth-child(10) {
+        display: none;
+    }
+
+    .footer .link_footerbaru {
+        display: none;
+    }
+
+    .footer .garis {
+        display: none;
     }
 }
 
