--- a/css/login.css
+++ b/css/login.css
@@ -1,7 +1,5 @@
 @font-face {
     font-family: 'vel';
-    /* font-style: normal;
-    font-weight: normal; */
     src: url('../font/Pragmatica-ExtraLight.woff') format('woff');
     }
 
@@ -13,7 +11,6 @@
 body {
     background-color: #f0f2f5;
     font-family: 'vel';
-
 }
 
 .container {
@@ -31,8 +28,6 @@ body {
     width: 301px;
     margin-top: 50px;
 }
-
-
 
 .main h2 {
     font-size: 27px;
@@ -163,7 +158,6 @@ body {
 }
 
 /* hide pw */
-
 #change {
     position: absolute;
     top: 95px;
@@ -265,7 +259,7 @@ footer {
 }
 
 /* responsive */
-/* @media (max-width: 992px) {
+@media (max-width: 992px) {
     .container {
         grid-template-columns: 1fr;
         margin: 0 auto 180px;
@@ -305,16 +299,13 @@ footer {
 
         margin-right: 20px;
     }
-} */
+}
 
 @media (max-width: 500px) {
     .container {
         width: 100%;
         margin: 0 auto;
-        /* margin-bottom: 500px; */
-        /* background-color: red; */
         grid-template-columns: 1fr;
-
     }
 
     .main .gambar {
@@ -331,12 +322,7 @@ footer {
         display: none;
     }
 
-    footer {
-        /* display: none; */
-    }
-
     .konten {
-        /* background-color: red; */
         max-width: 100%;
         justify-content: start;
     }
@@ -358,7 +344,8 @@ footer {
         margin-top: 7px;
     }
 
-    .konten  button {
+    .konten button {
+        border: none;
         max-width: 340px;
         margin-top: 8px;
         padding: 12px 16px;
@@ -428,17 +415,12 @@ footer {
         display: grid;
         grid-template-columns: 1fr 1fr;
         text-align: center;
-        /* background-color: red; */
         column-gap: 50px;
         margin-top: 80px;
     }
 
-    .footer .link_footer li:nth-child(8) {
-        display: none;
-    }
-    .footer .link_footer li:nth-child(9) {
-        display: none;
-    }
+    .footer .link_footer li:nth-child(8),
+    .footer .link_footer li:nth-child(9),
     .footer .link_footer li:nth-child(10) {
         display: none;
     }
